# testfwk_arkxtest

./: .gitignore  AGENTS.md  CODEOWNERS  README.en.md  README.md  README_en.md  README_zh.md  arkxtest_config.gni  bundle.json  deps.md
.gitee/: PULL_REQUEST_TEMPLATE.md
coverage_signal_handler/: BUILD.gn
coverage_signal_handler/src/: coverage_signal_handler.cpp
gcov_dump_sign/: BUILD.gn
gcov_dump_sign/src/: coverage_signal_handler.cpp  sign.cpp
hamock/: CHANGELOG.md  README.md  index.d.ts  index.ets
hamock/src/main/: module.json5
jsunit/: AGENTS.md  README.md  README_A.md  README_D.md  README_L.md  README_O.md  index.d.ts  index.ets  index.js  index.ts  package.json
jsunit/main/: hypiumApi.ets  interface.ets
jsunit/main_dynamic/: index.ts
jsunit/src/: Constant.js  core.js  event.js  index.ets  index.js  interface.js  service.js
jsunit/src_static/: Constant.ets  core.ets  hypium.ets  hypiumApi.ets  index.ets  interface.ets  package.json  util.ets  util.ets~
jsunit/test/: assertMatchObj.static.test.ets
perftest/: AGENTS.md  BUILD.gn
perftest/ani/ets/: @ohos.test.PerfTest.ets
perftest/ani/include/: callback_code_ani.h  error_handler.h
perftest/ani/src/: callback_code_ani.cpp  perftest_ani.cpp
perftest/collection/include/: app_start_time_collection.h  cpu_collection.h  data_collection.h  duration_collection.h  list_swipe_fps_collection.h  memory_collection.h  page_switch_time_collection.h
perftest/collection/src/: app_start_time_collection.cpp  cpu_collection.cpp  data_collection.cpp  duration_collection.cpp  list_swipe_fps_collection.cpp  memory_collection.cpp  page_switch_time_collection.cpp
perftest/connection/include/: api_caller_client.h  api_caller_server.h  ipc_transactor.h
perftest/connection/src/: api_caller_client.cpp  api_caller_server.cpp  ipc_transactor.cpp
perftest/core/include/: common_utils.h  frontend_api_defines.h  frontend_api_handler.h  perf_test.h  perf_test_strategy.h
perftest/core/src/: frontend_api_handler.cpp  perf_test.cpp  perf_test_strategy.cpp  start_daemon.cpp
perftest/napi/include/: callback_code_napi.h
perftest/napi/src/: callback_code_napi.cpp  perftest_exporter.js  perftest_napi.cpp
perftest/test/unittest/: data_collection_test.cpp  frontend_api_handler_test.cpp  ipc_transactor_test.cpp  perf_test_test.cpp
testhelper/: AGENTS.md  BUILD.gn
testhelper/include/: common_utils.h  gpx_parser.h  testhelper_core.h
testhelper/src/: common_utils.cpp  gpx_parser.cpp  testhelper_core.cpp  testhelper_main.cpp
testhelper/test/unittest/: common_utils_test.cpp  testhelper_core_test.cpp
testserver/: AGENTS.md
testserver/init/: BUILD.gn  testserver.cfg
testserver/sa_profile/: 5502.json  BUILD.gn
testserver/src/: BUILD.gn  ITestServerInterface.idl  Types.idl
testserver/src/client/: session_token.h  test_server_client.cpp  test_server_client.h
testserver/src/service/: test_server_service.cpp  test_server_service.h
testserver/src/utils/: test_server_error_code.h
testserver/test/: BUILD.gn
testserver/test/fuzztest/createsession_fuzzer/: BUILD.gn  createsession_fuzzer.cpp  createsession_fuzzer.h
testserver/test/unittest/: BUILD.gn  mock_permission.cpp  mock_permission.h  start_test_server.cpp  start_test_server.h  test_server_client_test.cpp  test_server_service_test.cpp
uitest/: AGENTS.md  BUILD.gn
uitest/addon/: extension_c_api.h  extension_executor.cpp  extension_executor.h  js_client_loader.cpp  js_client_loader.h  screen_copy.cpp  screen_copy.h
uitest/cj/: ui_event_observer_impl.cpp  ui_event_observer_impl.h  uitest_ffi.cpp  uitest_ffi.h  uitest_mock.cpp
uitest/connection/: ipc_transactor.cpp  ipc_transactor.h  ipc_transactors.cpp  ipc_transactors.h  ipc_transactors_impl.cpp  ipc_transactors_impl.h
uitest/core/: common_defines.h  common_utilities.hpp  common_utilities_hpp.h  dom_parser.cpp  dom_parser.h  dump_handler.cpp  element_node_iterator.h  extern_api.cpp  extern_api.h  extern_api_registration.cpp  frontend_api_defines.h  frontend_api_handler.cpp  frontend_api_handler.h  frontend_error_defines.h  frontend_type_defines.h  least_square_impl.cpp  least_square_impl.h  matrix3.cpp  matrix4.cpp  matrix4.h  offset.h  point.h  rect_algorithm.cpp  select_strategy.cpp  select_strategy.h  size.h  ui_action.cpp  ui_action.h  ui_controller.cpp  ui_controller.h  ui_driver.cpp  ui_driver.h  ui_model.cpp  ui_model.h  ui_record.cpp  ui_record.h  utils.h  velocity.h  velocity_tracker.cpp  velocity_tracker.h  (+10 more)
uitest/ets/ani/ets/: @ohos.UiTest.d.ets  @ohos.UiTest.ets  uitest_ani.ets
uitest/ets/ani/src/: error_handler.h  ui_event_observer_ani.cpp  ui_event_observer_ani.h  uitest_ani.cpp  utils.h
uitest/input/: ui_input.cpp  ui_input.h
uitest/js/napi/: ui_event_observer_napi.cpp  uitest_exporter.js  uitest_napi.cpp
uitest/napi/: ui_event_observer_napi.cpp  ui_event_observer_napi.h  uitest_exporter.js  uitest_napi.cpp
uitest/record/: external_calls.cpp  external_calls.h  findWidgetByCoord.cpp  findWidgetByCoord.h  find_widget.cpp  find_widget.h  keyevent_tracker.cpp  keyevent_tracker.h  least_square_impl.cpp  least_square_impl.h  macros.h  matrix3.cpp  matrix3.h  matrix4.cpp  matrix4.h  offset.h  point.h  pointer_info.cpp  pointer_info.h  pointer_tracker.cpp  pointer_tracker.h  size.h  touch_event.h  ui_record.cpp  ui_record.h  utils.h  velocity.h  velocity_tracker.cpp  velocity_tracker.h
uitest/server/: element_node_iterator_impl.cpp  element_node_iterator_impl.h  server_main.cpp  system_ui_controller.cpp  system_ui_controller.h
uitest/test/: common_utilities_test.cpp  dom_parser_test.cpp  dummy_controller.h  dummy_extension.cpp  extension_test.cpp  extern_api_test.cpp  frontend_api_handler_test.cpp  ipc_transactor_test.cpp  mock_controller.h  mock_element_node_iterator.h  mock_extension_executor.h  rect_algorithm_test.cpp  select_strategy_test.cpp  transaction_connection_test.cpp  ui_action_test.cpp  ui_controller_test.cpp  ui_driver_test.cpp  ui_model_test.cpp  uidriver_test.cpp  widget_image_test.cpp  widget_matcher_test.cpp  widget_operator_test.cpp  widget_selector_test.cpp
(+204 files in other folders)
