#
# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//test/testfwk/arkxtest/arkxtest_config.gni")

ohos_static_library("testhelper_core") {
  sources = [
    "./src/testhelper_core.cpp",
    "./src/common_utils.cpp",
  ]
  include_dirs = [ "./include" ]
  defines = [
    "__OHOS__=1",
    "LOG_TAG=\"TestHelper\"",
  ]
  external_deps = [
    "hilog:libhilog",
    "c_utils:utils",
    "time_service:time_client",
    "ability_runtime:wantagent_innerkits",
  ]
  if (defined(global_parts_info) && defined(global_parts_info.distributeddatamgr_pasteboard)) {
    external_deps += [
      "pasteboard:pasteboard_client",
      "pasteboard:pasteboard_data",
    ]
    defines += [ "ARKXTEST_PASTEBOARD_ENABLE"]
  }
  deps = [
    "../testserver/src:test_server_client",
  ]
  subsystem_name = "testfwk"
  part_name = "arkxtest"
}

ohos_executable("testhelper") {
  sources = [
    "./src/testhelper_main.cpp",
  ]
  include_dirs = [ "./include" ]
  deps = [ ":testhelper_core" ]
  external_deps = [
    "hilog:libhilog",
    "c_utils:utils",
  ]
  subsystem_name = "testfwk"
  part_name = "arkxtest"
  output_name = "testhelper"
  install_enable = true
  if (arkxtest_product_feature == "watch" || arkxtest_product_feature == "glasses") {
    install_enable = false
  }
  defines = [
    "__OHOS__=1",
    "LOG_TAG=\"TestHelper\"",
  ]
}

group("testhelperkit") {
  deps = [
    ":testhelper",
  ]
}
